--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     </div>
     <div class="content">
       <textarea class="editor light-text serif" placeholder="Enter some text or a Medium url..."></textarea>
-      <div class="stats serif light-text"></div>
+      <div class="stats sans-serif light-text"></div>
     </div>
     <!-- SCRIPTS! -->
     <script class="stats-table-template" type="text/html">
