Fix paragraph count and some styles.

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <!-- SCRIPTS! -->
     <script class="stats-table-template" type="text/html">
       {% raw %}
-      <h1>Stats for <br>&ldquo;<span class="first-sentence">{{ firstSentence }}</span>&rdquo;</h1>
+      <h1 class="serif">Stats for <br>&ldquo;<span class="first-sentence">{{ firstSentence }}</span>&rdquo;</h1>
       <table class="stats-table" cellpadding="0" cellspacing="0">
         <tr>
           <td class="label">Word Count</td>
