--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Text Stats</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='text-stats-favicon.png') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='app.css') }}">
   </head>
   <body>
